# ifood_analysis

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.astro/: config.yaml
include/: extract.py
