[tool.poetry]
name = "ifood-analysis"
version = "0.1.0"
description = ""
authors = ["Thomás <thomas.fsr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
astro-cli = "^0.1.3"
ignr = "^2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
