[tool.poetry]
name = "ifood-analysis"
version = "0.1.0"
description = ""
authors = ["Thomás <thomas.fsr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ignr = "^2.2"
pandas = "^2.2.2"
jupyter = "^1.0.0"
notebook = "^7.1.2"
python-dotenv = "^1.0.1"
google-api-python-client = "^2.125.0"
duckdb = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
